--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 tensorflow>=2.10.0
 flask>=2.3.0
 flask-cors>=4.0.0
+flask-session>=0.4.0
 numpy>=1.23.0
 pillow>=9.5.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 scikit-learn>=1.2.0
 pandas>=2.0.0
+mysql-connector-python>=8.0.0
+python-dotenv>=1.0.0
